--- a/Navbars/Navbar.html
+++ b/Navbars/Navbar.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  
+  <!--Use This Code Only-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -44,6 +46,8 @@
       </div>
     </div>
   </nav>
+  <!--Use This Code Only-->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 
